fixing z-index and better alignments

--- a/src/app/components/form/Input.scss
+++ b/src/app/components/form/Input.scss
@@ -7,7 +7,7 @@
     
     &__search {
         font-size: 1.2rem;
-        padding: .2em;
+        padding: .2em .8em;
         width: 100%;
         border: none;
         border-bottom: 1px solid $light-gray-d;
