--- a/src/app/components/template/Template.scss
+++ b/src/app/components/template/Template.scss
@@ -14,7 +14,7 @@
                 height: 70px;
                 border-bottom:2px solid $light-gray-e;
                 background: $white;
-                z-index: 2;
+                z-index: 3;
                 padding: 1em;
                 display: flex;
                 align-items: center;
