--- a/src/app/components/template/components/FixedHeader.scss
+++ b/src/app/components/template/components/FixedHeader.scss
@@ -5,6 +5,13 @@
     background: linear-gradient(to bottom, #f0f0f0 0%,rgba(255,255,255,1) 85%,rgba(245,245,255,0) 100%);
     transition: width .25s ease-in-out;
     width: calc(100% - 70px);
+    z-index: 3;
+
+    .buttonGroup {
+        &-root {
+            margin-right: 0 !important;
+        }
+    }
 
     &__with {
         &-contextBar {
